# openFVeiD

./: .gitignore  CMakeLists.txt  Info.plist.in  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml  release.yml
core/: application.cpp  application.h  common.h  dummies.h  track.cpp  track.h  workingdirectory.cpp  workingdirectory.h
renderer/: shaderuniforms.h  spirvlocator.cpp  spirvlocator.h  trackmesh.cpp  trackmesh.h  viewport.cpp  viewport.h
renderer/vulkan/: vulkanbuffer.cpp  vulkanbuffer.h  vulkancontext.cpp  vulkancontext.h  vulkanframebuffer.cpp  vulkanframebuffer.h  vulkanpipeline.cpp  vulkanpipeline.h  vulkantexture.cpp  vulkantexture.h
shaders/vulkan/: floor.frag  floor.vert  normals.frag  normals.vert  simple_shadow.frag  simple_shadow.vert  sky.frag  sky.vert  stl.frag  stl.vert  track.frag  track.vert  track_instanced.vert
tools/: bin2c.cpp
ui/: leftpanel.cpp
